# DFMM

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  book.toml  foundry.toml
.github/workflows/: rust.yaml  solidity.yaml
DFMMBook/src/: SUMMARY.md  architecture.md  behaviors.md  pools.md
arbiter-tests/: Cargo.toml
cache/: solidity-files-cache.json
kit/: .rustfmt.toml  Cargo.toml  README.md  main.rs
kit/configs/: example.toml  test.toml
kit/src/: lib.rs
kit/src/behaviors/: allocate.rs  create.rs  creator.rs  deploy.rs  deployer.rs  initialize.rs  mod.rs  swap.rs  token.rs  token_admin.rs  update.rs  updatoor.rs
kit/src/behaviors/allocate/: mod.rs
kit/src/behaviors/liquidity_provision/: initial.rs  mod.rs
kit/src/behaviors/swap/: mod.rs  on_command.rs
kit/src/behaviors/update/: mod.rs
kit/src/bindings/: arb_math.rs  arbiter_token.rs  atomic_v2.rs  coin.rs  constant_sum.rs  constant_sum_lib.rs  constant_sum_math.rs  constant_sum_set_up.rs  constant_sum_solver.rs  constant_sum_utils.rs  dfmm.rs  dfmm_init.rs  dfmm_internal.rs  dfmm_set_up.rs  dynamic_param_lib.rs  erc20_with_fees.rs  fixed_point_math_lib.rs  g3m.rs  g3m_arbitrage.rs  g3m_extended_lib.rs  g3m_lib.rs  g3m_math.rs  g3m_set_up.rs  g3m_solver.rs  g3m_utils.rs  gaussian.rs  geometric_mean.rs  geometric_mean_lib.rs  geometric_mean_solver.rs  i_strategy.rs  idfmm.rs  invariant.rs  lex.rs  lib_string.rs  log_normal.rs  log_normal_arbitrage.rs  log_normal_extended_lib.rs  log_normal_lib.rs  log_normal_math.rs  log_normal_set_up.rs  (+27 more)
kit/src/pool/: constant_sum.rs  geometric_mean.rs  log_normal.rs  mod.rs  n_token_geometric_mean.rs
kit/tests/: common.rs  creator_integration.rs  deploy_integration.rs  deployer.rs  swap_integration.rs  token_admin_integration.rs  token_integration.rs  update_integration.rs
kit/tests/agents/: creator_integration.rs  deploy_integration.rs  mod.rs  swap_integration.rs  token_integration.rs  update_integration.rs
kit/tests/agents/mock_agents/: creator_agent.rs  mod.rs  swap_agent.rs  token_agent.rs  update_agent.rs
report/: README.md  main.tex
script/: Deployment.s.sol
src/: DFMM.sol  DFMM2.sol  LICENSE  LPToken.sol  NTokenStrategy.sol  PairSolver.sol  PairStrategy.sol  Strategy.sol  Strategy2.sol
src/ConstantSum/: ConstantSum.sol  ConstantSumLib.sol  ConstantSumMath.sol  ConstantSumSolver.sol  ConstantSumUtils.sol  README.md
src/CoveredCall/: CoveredCall.sol  CoveredCallMath.sol  CoveredCallSolver.sol  CoveredCallUtils.sol
src/GeometricMean/: G3MExtendedLib.sol  G3MMath.sol  G3MUtils.sol  GeometricMean.sol  GeometricMean2.sol  GeometricMeanLib.sol  GeometricMeanSolver.sol  README.md  geometric_mean.nb  n_token_geometric_mean.nb
src/LogNormal/: LogNormal.sol  LogNormalExtendedLib.sol  LogNormalLib.sol  LogNormalMath.sol  LogNormalSolver.sol  LogNormalUtils.sol  README.md  log_normal.nb
src/NTokenGeometricMean/: NTokenGeometricMean.sol  NTokenGeometricMeanExtendedLib.sol  NTokenGeometricMeanLib.sol  NTokenGeometricMeanMath.sol  NTokenGeometricMeanSolver.sol  NTokenGeometricMeanUtils.sol
src/SYCoveredCall/: SYCoveredCall.sol  SYCoveredCallMath.sol  SYCoveredCallSolver.sol  SYCoveredCallUtils.sol
src/interfaces/: IDFMM.sol  IDFMM2.sol  ISolver.sol  IStrategy.sol  IStrategy2.sol  ISwapCallback.sol
src/lib/: BisectionLib.sol  BisectionLib2.sol  DynamicParamLib.sol  ScalingLib.sol  StrategyLib.sol
src/script/: Deployment.s.sol
test/ConstantSum/: ConstantSumTest.t.sol
(+94 files in other folders)
