[package]
name = "dfmm-kit"
version = "0.0.1"
edition = "2021"
authors = ["Colin Roberts <colin@autoparallel.xyz>"]
description = "The Rust kit for the DFMM contracts."
license = "Apache-2.0"
keywords = ["ethereum", "smart-contracts", "automated market makers"]
readme = "../README.md"

[dependencies]
arbiter-core = "0.10.2"
arbiter-engine = "0.3.0"
arbiter-macros = "0.1.2"
arbiter-bindings = "0.1.6"

# Ethereum
ethers = "2.0.13"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.77"
futures-util = "0.3.30"

# Serde 
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_traitobject = "0.2.8"

# Errors and tracing
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# CLI
clap = { version = "4.5.1", features = ["derive"] }

[[bin]]
name = "kit"
path = "main.rs"
