[package]
name = "dfmm-kit"
version = "0.0.1"
edition = "2021"
authors = ["Colin Roberts <colin@autoparallel.xyz>"]
description = "The Rust kit for the DFMM contracts."
license = "Apache-2.0"
keywords = ["ethereum", "smart-contracts", "automated market makers"]
readme = "../README.md"

[dependencies]
arbiter-core = { git = "https://github.com/primitivefinance/arbiter.git", rev = "bd08b647" }
arbiter-engine = { git = "https://github.com/primitivefinance/arbiter.git", rev = "bd08b647" }
arbiter-macros = { git = "https://github.com/primitivefinance/arbiter.git", rev = "bd08b647" }
arbiter-bindings = { git = "https://github.com/primitivefinance/arbiter.git", rev = "bd08b647" }

# Ethereum
ethers = "2.0.13"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.77"
futures-util = "0.3.30"

# Serde 
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Errors and tracing
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# CLI
clap = { version = "4.5.1", features = ["derive"] }

[[bin]]
name = "kit"
path = "main.rs"
