[package]
name = "dfmm-kit"
version = "0.0.1"
edition = "2021"
authors = ["Colin Roberts <colin@autoparallel.xyz>"]
description = "The Rust kit for the DFMM contracts."
license = "Apache-2.0"
keywords = ["ethereum", "smart-contracts", "automated market makers"]
readme = "../README.md"

[dependencies]
arbiter-core = { git = "https://github.com/primitivefinance/arbiter.git", rev = "d5bc1bb3" }
arbiter-engine = { git = "https://github.com/primitivefinance/arbiter.git", rev = "d5bc1bb3" }
arbiter-macros = { git = "https://github.com/primitivefinance/arbiter.git", rev = "d5bc1bb3" }
arbiter-bindings = { git = "https://github.com/primitivefinance/arbiter.git", rev = "d5bc1bb3" }

# Ethereum
ethers = "2.0.14"

# Async
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.80"
futures-util = "0.3.30"

# Serde 
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

# CLI
clap = { version = "4.5.4", features = ["derive"] }

# Errors and tracing
anyhow = "1.0.82"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "kit"
path = "main.rs"
